<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="options" type="com.github.onionjake.doh.Options"/>
    </data>
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.github.onionjake.doh.MainActivity"
        tools:showIn="@layout/activity_main">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/main_edit_text_domain"
                android:text="@{options.domain}"
                android:inputType="textFilter|textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/domain" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_domain">
            <EditText
                android:id="@+id/main_edit_text_salt"
                android:inputType="textFilter|textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salt" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_sequence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_salt">
            <EditText
                android:id="@+id/main_edit_text_sequence"
                android:inputType="textFilter|textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sequence" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_sequence">
            <EditText
                android:id="@+id/main_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/master_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/main_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_password"
            android:padding="16dp"
            android:textIsSelectable="true"/>
        <Button
            android:id="@+id/button_compute"
            android:text="@string/compute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_description"/>
    </RelativeLayout>
</layout>

